--- a/lab-4-adjective.yml
+++ b/lab-4-adjective.yml
@@ -2,6 +2,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8010/eureka/
+---
+spring:
+  profiles: adjective
 word:
   kiran
   akshay
