--- a/lab-4-adjective.yml
+++ b/lab-4-adjective.yml
@@ -2,10 +2,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8010/eureka/
----
-spring:
-  profiles: adjective
-word:
+words:
   kiran
   akshay
   mahesh
