word sre place in one line

--- a/lab-4-adjective.yml
+++ b/lab-4-adjective.yml
@@ -2,9 +2,4 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8010/eureka/
-words:
-  kiran
-  akshay
-  mahesh
-  anway
-  hanmant
+words: kiran,akshay,mahesh,anway,hanmant
